# raylib-nbody

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  VENDORED_DEPS.md
src/: main.cpp
src/components/: Components.hpp
src/core/: Camera.hpp  Color.hpp  Colors.hpp  Config.hpp  Constants.hpp  Math.hpp  Scenario.hpp  TrailPool.hpp  Vec2.hpp
src/physics/: SpatialPartition.hpp
src/systems/: Camera.cpp  Camera.hpp  Collision.hpp  Diagnostics.hpp  Input.cpp  Interaction.cpp  Interaction.hpp  Physics.cpp  Physics.hpp  Render.cpp  Render.hpp  UI.cpp  UI.hpp  WorldRenderer.hpp
tests/: two_body.cpp
